Reset data holder for section title on reload

The section identifiers of the added sections part of ContentSuggestions
need to be reset when all the data concerning the added items is reset.

Bug: 752037
Change-Id: Ic37871e9f8f8bb3e43bc63af03a47d1756902fbe
Reviewed-on: https://chromium-review.googlesource.com/600048
Reviewed-by: Jean-François Geyelin <jif@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491698}
Former-commit-id: 0949160e1a76623658d4bba4e8997b92066fa2d3